--- a/Steck_Aufgabe131.html
+++ b/Steck_Aufgabe131.html
@@ -21,18 +21,20 @@ In der Massentierhaltung ist eine wichtige Größe,
 wann das Tier Schlachtgewicht erreicht. 
 Messungen haben ergeben: 
 
-Anzahl Monate       0        2       4        5       6    
-Gewicht G in kg     1,5     30      67       80      88 
+Anzahl Monate     0     2     4     5     6    
+Gewicht Gin kg    1,5  30    67    80    88 
 
 Man hat festgestellt, dass die Gewichtszunahme 
 durch eine ganzrationale Funktion 4. Grades 
 beschrieben werden kann. 
 a) Welches Gewicht hat ein Tier nach einem Monat?  
-b) Nach wieviel Tagen ist die Gewichtszunahme maximal? 
+b) Nach wieviel Tagen ist die Gewichtszunahme 
+maximal? 
 
 <img src="Aufgabe131.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 4. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 4. Grades: 
 
 f<sub>(x)</sub> = ax<sup>4</sup> + bx<sup>3</sup> + cx<sup>2</sup> + dx + e 
 
@@ -113,14 +115,14 @@ I * (-2,5) + III
 -40a -  20b - 10c - 5d = -71,25 
 625a + 125b + 25c + 5d =  78,5 
 -------------------------------
-585a + 105b + 15c      =   7,25               VII   
+585a + 105b + 15c      =   7,25            VII   
  
 V * (-3) + VI 
 
 -672a - 144b - 24c = -25,5 
 1248a + 192b + 24c =   1 
 ---------------------------
-576a + 48b         = -24,5                  VIII 
+576a + 48b         = -24,5                 VIII 
  
 V * (-15) + VI * 8 
 
@@ -136,9 +138,9 @@ VIII * (-5) + IX * 2
 -----------------------
  -240a        = -16,5 |:(-240) 
  
-                 16,5     165      11   
-            a = ------ = ------ = ----- = 0,006875 
-                 240      2400     160   
+                16,5     165      11   
+           a = ------ = ------ = ----- = 0,006875 
+                240      2400     160   
  
 a = 0,06875 in VIII eingesetzt: 
  
@@ -164,25 +166,26 @@ a = 0,06875 und b = -641/480 in V eingesetzt:
  
                                   c = 7,15   
  
-a = 0,06875 und b = - 641/480 und c = 7,15 in I eingesetzt: 
+a = 0,06875 und b = -641/480 und c = 7,15 in I 
+eingesetzt: 
  
 16 * 0,06875 + 8 * (- 641/480) + 4 * 7,15 + 2d = 28,5 
  
                       1,1 - 641/60 + 28,6 + 2d = 28,5 
  
-                            29,7 - 641/60 + 2d = 28,5 |+641/60 
+                    29,7 - 641/60 + 2d = 28,5 |+641/60 
  
-                                     29,7 + 2d = 641/60 + 28,5 |-29,7 
+                      29,7 + 2d = 641/60 + 28,5 |-29,7 
  
-                                            2d = 641/60 - 1,2 
+                             2d = 641/60 - 1,2 
  
-                                                  641 - 72  
-                                            2d = ---------- |:2 
-                                                     60   
+                                   641 - 72  
+                             2d = ---------- |:2 
+                                      60   
  
-                                                  569    
-                                             d = ------ 
-                                                  120 
+                                   569    
+                              d = ------ 
+                                   120 
  
 f<sub>(x)</sub> = 0,06875x<sup>4</sup> - (641/480)x<sup>3</sup> + 7,15x<sup>2</sup> + (569/120)x + 1,5         
  
@@ -192,8 +195,8 @@ f<sub>(1)</sub> = 0,006875 - 1,33548 + 7,15 + 4,74167 + 1,5
  
 b)  
  
-Den stärksten Anstieg erhält man, wenn man das Maximum der ersten 
-Ableitung ermittelt: 
+Den stärksten Anstieg erhält man, wenn man das 
+Maximum der ersten Ableitung ermittelt: 
  
 f’<sub>(x)</sub> = (11/40)x<sup>3</sup> - (641/160)x<sup>2</sup> + 14,3x + 569/120 
  
@@ -231,6 +234,8 @@ x<sub>2</sub> = --------- = 2,36 Monate
 
 <span style="color:red">71 Tage gerundet</span>
  
-f’’’<sub>(2,36)</sub> = (66/40) * 2,36 - 641/80 = 3,894 - 8,0125 < 0 --> Maximum
+f’’’<sub>(2,36)</sub> = (66/40) * 2,36 - 641/80 = 
+
+= 3,894 - 8,0125 < 0 --> Maximum
 
 </b></p></pre></body></html>
