--- a/Steck_Aufgabe132.html
+++ b/Steck_Aufgabe132.html
@@ -17,18 +17,19 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 132
 
-Für eine quadratische Kostenfunktion gelten folgende 
-betriebliche Bedingungen: 
-Die Fixkosten betragen 5 GE (Geldeinheiten), die Grenz-
-kosten bei 15 ME (Mengeneinheiten) betragen 0,3 GE, 
-und bei 10 ME entstehen Gesamtkosten von 6 GE. 
-Für die Erlösfunktion des Monopolisten gilt: Bei 10 ME 
-ist der Erlös 20 GE, und bei 15 ME ist er maximal. 
-Wie hoch ist der maximale Gewinn? 
+Für eine quadratische Kostenfunktion gelten 
+folgende betriebliche Bedingungen: 
+Die Fixkosten betragen 5 GE (Geldeinheiten), die 
+Grenzkosten bei 15 ME (Mengeneinheiten) betragen 
+0,3 GE, und bei 10 ME entstehen Gesamtkosten von 
+6 GE. Für die Erlösfunktion des Monopolisten gilt:
+Bei 10 ME ist der Erlös 20 GE, und bei 15 ME ist 
+er maximal. Wie hoch ist der maximale Gewinn? 
 
 <img src="Aufgabe132.jpg" >
 
-Allgemeine Form einer quadratischen Kostenfunktion: 
+Allgemeine Form einer quadratischen Kosten-
+funktion: 
  
 K<sub>(x)</sub> = ax<sup>2</sup> + bx + K<sub>f</sub> 
  
@@ -40,7 +41,8 @@ K<sub>f</sub> = Fixkosten = 5 GE
  
 2 Bedingungen: 
  
-1. Die Grenzkosten bei 15 ME betragen 0,3 GE besdeutet:  
+1. Die Grenzkosten bei 15 ME betragen 0,3 GE 
+besdeutet:  
  
 K’<sub>(15)</sub> = 0,3  --> 
 
@@ -48,8 +50,8 @@ K’<sub>(15)</sub> = 0,3  -->
 
 30a + b = 0,3         I 
  
-2. Bei 10 ME enststehen Gesamtkosten von 6 GE bedeutet: 
-(K<sub>f</sub> = 5 GE eingesetzt) 
+2. Bei 10 ME enststehen Gesamtkosten von 6 GE 
+bedeutet: (K<sub>f</sub> = 5 GE eingesetzt) 
  
 K<sub>(10)</sub> = 6  --> 
 
@@ -80,7 +82,8 @@ Gesuchte Kostenfunktion:
  
 K<sub>(x)</sub> = 0,01x<sup>2</sup> + 5 
  
-Erlösfunktion E<sub>(x)</sub> 2. Grades mengenabhängig wegen Monopolist: 
+Erlösfunktion E<sub>(x)</sub> 2. Grades mengenabhängig wegen 
+Monopolist: 
  
 E<sub>(x)</sub> = ax<sup>2</sup> + bx  
  
@@ -143,6 +146,8 @@ G<sub>max</sub> = G<sub>(13,64)</sub> = -0,11 * 13,64<sup>2</sup> + 3 * 13,64 - 
 
 <span style="color:red">G<sub>max</sub> = 15,45 GE</span> 
 
-G’’<sub>(15,45)</sub> = -0,22 * 15,45 + 3 = -3,399 + 3 < 0 --> Maximum
+G’’<sub>(15,45)</sub> = -0,22 * 15,45 + 3 = 
+
+= -3,399 + 3 < 0 --> Maximum
 
 </b></p></pre></body></html>
