--- a/Steck_Aufgabe133.html
+++ b/Steck_Aufgabe133.html
@@ -22,14 +22,16 @@ gelten folgende betriebliche Bedingungen:
 Ein Bauteil kostet in der Herstellung 90 GE, die 
 variablen Kosten für 2 Bauteile betragen 56 GE, 
 die Grenzkosten betragen 27 GE pro Bauteil und 
-das Minimum der Grenzkosten liegt bei 8/3 Bauteilen. 
+das Minimum der Grenzkosten liegt bei 8/3 
+Bauteilen. 
 Jedes Bauteil wird für 90 GE verkauft.  
 a) Wie hoch ist das Gewinnmaximum?  
 b) Bei wieviel ME liegt das Betriebsminimum? 
 
 <img src="Aufgabe133.jpg" >
 
-Allgemeine Form einer ganzrationalen Kostenfunktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Kostenfunktion 3. Grades: 
 
 K<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
 
@@ -41,9 +43,12 @@ K<sub>v(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx
 
 4 Bedingungen: 
 
-1. Ein Bauteil kostet in der Herstellung 90 GE bedeutet: 
+1. Ein Bauteil kostet in der Herstellung 90 GE 
+bedeutet: 
 
-K<sub>(1)</sub> = 90 --> a * 1<sup>3</sup> + b * 1<sup>2</sup> + c * 1 + d = 90 -->  
+K<sub>(1)</sub> = 90 --> 
+
+a * 1<sup>3</sup> + b * 1<sup>2</sup> + c * 1 + d = 90 -->  
 
 a + b + c + d = 90       I  
 
@@ -56,7 +61,8 @@ a * 2<sup>3</sup> + b * 2<sup>2</sup> + c * 2 = 56 -->
 
 8a + 4b + 2c = 56       II 
 
-3. Die Grenzkosten betragen 27 GE pro Bauteil  bedeutet: 
+3. Die Grenzkosten betragen 27 GE pro Bauteil 
+bedeutet: 
 
 K’<sub>(1)</sub> = 27 --> 
 
@@ -64,7 +70,8 @@ K’<sub>(1)</sub> = 27 -->
 
 3a + 2b + c = 27      III 
 
-4. Das Minimum der Grenzkosten liegt bei 8/3 Bauteilen bedeutet: 
+4. Das Minimum der Grenzkosten liegt bei 8/3 
+Bauteilen bedeutet: 
 
 (K’’<sub>(x)</sub> ist die erste Ableitung von K’<sub>(x)</sub>) 
 
@@ -155,7 +162,9 @@ x<sub>1</sub> = ---------- = 7,5 ME gerundet
  
 G’’<sub>(x)</sub> = -6x + 16 
  
-G’’<sub>(7,5)</sub> = -6 * 7,5 + 16 = -45 + 16 = - 29 < 0 --> Maximum 
+G’’<sub>(7,5)</sub> = -6 * 7,5 + 16 = 
+
+= -45 + 16 = - 29 < 0 --> Maximum 
   
 <span style="color:red">G<sub>max</sub></span> = G<sub>(7,5)</sub> = -7,5<sup>3</sup> + 8 * 7,5<sup>2</sup> + 50 * 7,5 - 57 = 
 
@@ -164,8 +173,10 @@ G’’<sub>(7,5)</sub> = -6 * 7,5 + 16 = -45 + 16 = - 29 < 0 --> Maximum
 b) Betriebsminimum --> k<sub>v</sub>’<sub>(x)</sub> = 0  
  
          K<sub>v(x)</sub>      x<sup>3</sup> - 8x<sup>2</sup> + 40x   
-k<sub>(vx)</sub> = ------- = ------------------ = x² - 8x + 40 
-           x               x     
+k<sub>(vx)</sub> = ------- = ------------------ =  
+           x               x  
+           
+= x<sup>2</sup> - 8x + 40           
  
 k<sub>v</sub>’<sub>(x)</sub> = 2x - 8 = 0 |+8 
  
