--- a/Steck_Aufgabe134.html
+++ b/Steck_Aufgabe134.html
@@ -27,7 +27,8 @@ Bei wieviel ME liegt das Betriebsoptimum?
 
 <img src="Aufgabe134.jpg" >
 
-Allgemeine Form einer ganzrationalen Kostenfunktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Kostenfunktion 3. Grades: 
 
 K<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
 
@@ -35,10 +36,13 @@ K’<sub>(x)</sub> = 3ax<sup>2</sup> + 2bx + c
 
 K’’<sub>(x)</sub> = 6ax + 2b 
 
-                            K<sub>(x)</sub>                    d        
-Stückkostenfunktion k<sub>(x)</sub> = ------ = ax<sup>2</sup> + bx + c + --- 
-                              x                     x 
- 
+                            K<sub>(x)</sub>                            
+Stückkostenfunktion k<sub>(x)</sub> = ------ =  
+                              x                      
+                  d
+= ax<sup>2</sup> + bx + c + ---
+                  x 
+
                    d    
 k’<sub>(x)</sub> = 2ax + b - ---- 
                    x<sup>2</sup>   
@@ -68,7 +72,8 @@ a * 4<sup>3</sup> + b * 4<sup>2</sup> + c * 4 + 16 = 48 -->
  
 64a + 16b + 4c = 32        I 
  
-3. Die Grenzkosten für 2 ME betragen 4 GE bedeutet: 
+3. Die Grenzkosten für 2 ME betragen 4 GE 
+bedeutet: 
  
 K’<sub>(2)</sub> = 4 --> 
 
@@ -76,7 +81,8 @@ K’<sub>(2)</sub> = 4 -->
 
 12a + 4b + c = 4      II 
  
-4. Die Stückkosten für 3 ME sind 37/3 GE bedeutet: 
+4. Die Stückkosten für 3 ME sind 37/3 GE 
+bedeutet: 
  
 k<sub>v(3)</sub> = a * 3² + b * 3 + c + (16/3) = 37/3 -->  
  
@@ -128,7 +134,8 @@ Gesuchte Kostenfunktion:
  
 K<sub>(x)</sub> = x<sup>3</sup> - 6x<sup>2</sup> + 16x + 16 
  
-Das Betriebsoptimum ist das Minimum der Stückkostenfunktion k<sub>(x)</sub>: 
+Das Betriebsoptimum ist das Minimum der 
+Stückkostenfunktion k<sub>(x)</sub>: 
  
                    d    
 k’<sub>(x)</sub> = 2ax + b - ---- = 0 
@@ -142,8 +149,8 @@ k’<sub>(x)</sub> = 2x - 6 - ----- = 0 | *x<sup>2</sup>
 
 <img src="Aufgabe134_2.jpg" >
  
-Ermittlung der Nullstelle zwischen 3,5 und 4 mit dem Newtonverfahren 
-und Excel: 
+Ermittlung der Nullstelle zwischen 3,5 und 4 mit 
+dem Newtonverfahren und Excel: 
  
            k<sub>(x0)</sub>    
 x<sub>1</sub> = x0 - ------- 
@@ -151,9 +158,10 @@ x<sub>1</sub> = x0 - -------
            
 <img src="Aufgabe134_1.jpg" >
  
-Der letzte Wert in der Spalte E ist der gesuchte. Mit ausreichender   
- 
-Genauigkeit x<sub>0</sub>= <span style="color:red">3,61 ME Betriebsoptimum</span>. 
+Der letzte Wert in der Spalte E ist der gesuchte. 
+Mit ausreichender Genauigkeit 
+
+x<sub>0</sub> = <span style="color:red">3,61 ME Betriebsoptimum</span>. 
  
          x<sup>3</sup> - 6x<sup>2</sup> + 16x + 16 
 k<sub>(x)</sub> = ----------------------- = x<sup>2</sup> - 6x + 16 + 16/x 
