--- a/Steck_Aufgabe135.html
+++ b/Steck_Aufgabe135.html
@@ -17,18 +17,19 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 135
 
-Die Produktion eines Lebensmittels findet unter folgenden 
-betrieblichen Bedingungen statt: 
+Die Produktion eines Lebensmittels findet unter 
+folgenden betrieblichen Bedingungen statt: 
 
 Menge in t         0     6     20     30 
 Kosten in €      250   500    700    900   
 
-Wieviel kosten 25 t, wenn die Kostenfunktion 3. Grades 
-und ganzrational ist? 
+Wieviel kosten 25 t, wenn die Kostenfunktion 
+3. Grades und ganzrational ist? 
 
 <img src="Aufgabe135.jpg" >
 
-Allgemeine Form einer ganzrationalen Kostenfunktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Kostenfunktion 3. Grades: 
 
 K<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
 
