--- a/Steck_Aufgabe136.html
+++ b/Steck_Aufgabe136.html
@@ -17,10 +17,10 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 136
 
-Die fixen Kosten bei der Herstellung eines Bauteils 
-betragen 2000 €, die variablen Kosten gibt der 
-Hersteller mit 0,8x<sup>2</sup> + 60x an. Der Verkaufspreis 
-beträgt 180 €. 
+Die fixen Kosten bei der Herstellung eines 
+Bauteils betragen 2000 €, die variablen Kosten 
+gibt der Hersteller mit 0,8x<sup>2</sup> + 60x 
+an. Der Verkaufspreis beträgt 180 €. 
 a) Bei welcher Menge liegt die Gewinnschwelle?  
 b) Wie groß ist der maximale Gewinn?  
 c) Ab welchem Verkaufspreis macht der Hersteller 
@@ -42,7 +42,8 @@ G<sub>(x)</sub> = E<sub>(x)</sub> - K<sub>(x)</sub> = 180x - (0,8x<sup>2</sup> +
  
 G<sub>(x)</sub> = -0,8x<sup>2</sup> + 120x - 2000 
  
-a) Für die Gewinnschwelle wie die Gewinngrenze gilt G(x) = 0 
+a) Für die Gewinnschwelle wie die Gewinngrenze 
+gilt G(x) = 0 
 
  -0,8x<sup>2</sup> + 120x - 2000 = 0 |:-0,8 
  
@@ -74,15 +75,17 @@ x = 75 ME
 
 G’’<sub>(75)</sub> = -1,6 < 0 --> Maximum 
 
-c) Der Gewinn ist dann = 0, wenn die Erlösfunktion E<sub>(x)</sub> 
-die Kostenfunktion K<sub>(x)</sub> tangiert. also mit K<sub>(x)</sub> einen 
-Berührpunkt hat. Dann gilt dort E<sub>(x)</sub> = K<sub>(x)</sub>. 
+c) Der Gewinn ist dann = 0, wenn die Erlösfunktion 
+E<sub>(x)</sub> die Kostenfunktion K<sub>(x)</sub> tangiert, 
+also mit K<sub>(x)</sub> einen Berührpunkt hat. 
+Dann gilt dort E<sub>(x)</sub> = K<sub>(x)</sub>. 
 
 <img src="Aufgabe136_1.jpg" >
  
 p = Verkaufspreis 
  
-E<sub>(x)</sub> = p * x, dies ist eine Gerade mit der Steigung p. 
+E<sub>(x)</sub> = p * x, dies ist eine Gerade mit der 
+Steigung p. 
  
 p * x = -0,8x<sup>2</sup> + 120x - 2000 |:x 
  
@@ -114,8 +117,12 @@ x<sub>2</sub> = -50 keine Lösung, negative Mengeneinheit
 
 x = 50 eingesetzt: 
 
-     0,8 * 50<sup>2</sup> + 60 * 50 + 2000      2000 + 3000 + 2000  
-<span style="color:red">p</span> = ----------------------------- = -------------------- <span style="color:red">= 140 €</span> 
-                    50                       50
+     0,8 * 50<sup>2</sup> + 60 * 50 + 2000        
+<span style="color:red">p</span> = ----------------------------- =  
+                    50                       
 
+   2000 + 3000 + 2000
+= -------------------- <span style="color:red">= 140 €</span>
+            50 
+            
 </b></p></pre></body></html>
