--- a/Steck_Aufgabe137.html
+++ b/Steck_Aufgabe137.html
@@ -18,19 +18,22 @@
     <pre><p class ="Aufgabe"><b>Aufgabe 137
 
 Eine Firma bestimmt ihre Gesamtkosten mit einer 
-ertragsgesetzlichen Kostenfunktion. Ihre jährlichen 
-Fixkosten betragen 30 000 €, bei einer Menge von 
-20 ME fallen 60 000 € Kosten an, bei einer Menge 
-von 60 ME entstehen durchschnittliche Kosten von 
-1200 €, dort ist auch das Betriebsminimum. 
+ertragsgesetzlichen Kostenfunktion. Ihre 
+jährlichen Fixkosten betragen 30 000 €, bei einer 
+Menge von 20 ME fallen 60 000 € Kosten an, bei 
+einer Menge von 60 ME entstehen durchschnittliche 
+Kosten von 1200 €, dort ist auch das 
+Betriebsminimum. 
 Welche Kosten entstehen bei 40 ME?  
 
 <img src="Aufgabe137.jpg" >
 
-Ertragsgestzliche Kostenfunktion bedeutet, dass von 
-einer Kostenfunktion 3. Grades ausgegangen wird.
+Ertragsgestzliche Kostenfunktion bedeutet, dass 
+von einer Kostenfunktion 3. Grades ausgegangen 
+wird.
 
-Allgemeine Form einer ganzrationalen Kostenfunktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Kostenfunktion 3. Grades: 
 
 K<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
 
@@ -42,7 +45,8 @@ K<sub>v(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx
 
 4 Bedingungen: 
 
-1. Ihre jährlichen Fixkosten betragen 30 000 € bedeutet: 
+1. Ihre jährlichen Fixkosten betragen 30 000 € 
+bedeutet: 
  
 K<sub>(0)</sub> = 30 000 --> 
 
@@ -50,8 +54,8 @@ a * 0<sup>3</sup> + b * 0<sup>2</sup> + c * 0 + d = 30 000 -->
 
 d = 30 000 
  
-2. Bei einer Menge von 20 ME fallen 60 000 € Kosten an bedeutet:  
-(d = 30 000 eingesetzt) 
+2. Bei einer Menge von 20 ME fallen 60 000 € 
+Kosten an bedeutet: (d = 30 000 eingesetzt) 
  
 K<sub>(20)</sub> = 60 000 --> 
 
@@ -61,12 +65,15 @@ a * 20<sup>3</sup> + b * 20<sup>2</sup> + c * 20 + 30 000 = 60 000 -->
  
 8000a + 400b + 20c = 30 000        I 
  
-3. Bei einer Menge von 60 ME entstehen durchschnittliche 
-Kosten von 1200 € bedeutet: (d = 30 000 eingesetzt) 
+3. Bei einer Menge von 60 ME entstehen 
+durchschnittliche Kosten von 1200 € bedeutet: 
+(d = 30 000 eingesetzt) 
  
-                    a * 60³ + b * 60² + c * 60 + 30 000   
-k<sub>(60)</sub> = 1 200 --> --------------------------------------- = 1200 -->  
-                                   60 
+k<sub>(60)</sub> = 1 200 --> 
+
+  a * 60³ + b * 60² + c * 60 + 30 000 
+--------------------------------------- = 1200 -->  
+                   60 
  
 = a * 60<sup>2</sup> + b * 60 + c + 500 = 1200 |-500  
  
