--- a/Steck_Aufgabe138.html
+++ b/Steck_Aufgabe138.html
@@ -21,14 +21,15 @@ Ein Hersteller berechnet seine Gesamtkosten mit
 einer ganzrationalen Funktion 3. Grades. Dabei 
 setzt er 720 € Fixkosten an, rechnet mit 
 durchschnittlichen variablen Kosten von 50 € bei 
-einer produzierten Menge von 100 ME, mit Grenzkosten 
-von 48,03 € bei 1 ME und mit gesamten Durchschnitts-
-kosten von 70 € bei 20 ME. 
+einer produzierten Menge von 100 ME, mit 
+Grenzkosten von 48,03 € bei 1 ME und mit gesamten 
+Durchschnittskosten von 70 € bei 20 ME. 
 Bei welcher ME liegt sein  Betriebsminimum? 
 
 <img src="Aufgabe138.jpg" >
 
-Allgemeine Form einer ganzrationalen Kostenfunktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Kostenfunktion 3. Grades: 
 
 K<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
 
@@ -48,8 +49,9 @@ a * 0<sup>3</sup> + b * 0<sup>2</sup> + c * 0 + d = 720 -->
 
 d = 720 
  
-2. Rechnet mit durchschnittlichen variablen Kosten 
-von 50 € bei einer produzierten Menge von 100 ME bedeutet:  
+2. Rechnet mit durchschnittlichen variablen 
+Kosten von 50 € bei einer produzierten Menge von 
+100 ME bedeutet:  
  
 K<sub>v(x)</sub> = a * x<sup>3</sup> + b * x<sup>2</sup> + c * x 
  
@@ -74,9 +76,11 @@ K’<sub>(1)</sub> = 48,03 -->
 4. Mit gesamten Durchschnittskosten von 70 € 
 bei 20 ME bedeutet: 
  
-                 a * 20<sup>3</sup> + b * 20<sup>2</sup> + c * 20 + 720   
-k<sub>(20)</sub> = 70 --> ----------------------------------- = 70 -->  
-                                20 
+k<sub>(20)</sub> = 70 --> 
+
+   a * 20<sup>3</sup> + b * 20<sup>2</sup> + c * 20 + 720
+= ----------------------------------- = 70 -->  
+                     20 
  
 a * 20<sup>2</sup> + b * 20 + c + 36 = 70 |-36  
  
@@ -133,9 +137,13 @@ Für das Betiebsminimum gilt:
 
 k<sub>v</sub>’<sub>(x)</sub> = 0 
 
-          K<sub>v(x)</sub>       0,01x<sup>3</sup> - x<sup>2</sup> + 50x 
-k<sub>v(x)</sub> = --------- = ---------------------- = 0,01x<sup>2</sup> - x + 50 
-            x                 x 
+          K<sub>v(x)</sub>       
+k<sub>v(x)</sub> = --------- = 
+            x                  
+
+   0,01x<sup>3</sup> - x<sup>2</sup> + 50x 
+= ---------------------- = 0,01x<sup>2</sup> - x + 50 
+              x
     
 k<sub>v</sub>’<sub>(x)</sub> = 0,02x - 1 = 0 |+1 
  
