--- a/Steck_Aufgabe140.html
+++ b/Steck_Aufgabe140.html
@@ -17,21 +17,25 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 140
 
-In einer landwirtschaftlichen Versuchsstation hat man 
-den Ertrag eines Erdbeerfeldes und die eingesetzte 
-Düngermenge in t gemessen. Zur graphischen Darstellung 
-dieses Sachverhaltes wird eine ganzrationale Funktion 
-4. Grades mit folgenden Bedingungen eingesetzt. Ungedüngt 
+In einer landwirtschaftlichen Versuchsstation hat 
+man den Ertrag eines Erdbeerfeldes und die 
+eingesetzte Düngermenge in t gemessen. Zur 
+graphischen Darstellung dieses Sachverhaltes wird 
+eine ganzrationale Funktion 4. Grades mit 
+folgenden Bedingungen eingesetzt. Ungedüngt 
 liefert das Feld minimal 4 t Erdbeeren, der Ertrag 
-verdreifacht sich und wird maximal, wenn eine Tonne Dünger 
-eingesetzt wird, beim Einsatz von 2 t sinkt der Ertrag 
-wegen Überdüngung auf 0 t. (Der Graph liefert nur bis 
-zu dieser Düngermenge brauchbare Ergebnisse). 
-Welchen Ertrag erzielt man beim Einsatz von 1,5 t Dünger? 
+verdreifacht sich und wird maximal, wenn eine 
+Tonne Dünger eingesetzt wird, beim Einsatz von 2 t 
+sinkt der Ertrag wegen Überdüngung auf 0 t. 
+(Der Graph liefert nur bis zu dieser Düngermenge 
+brauchbare Ergebnisse). 
+Welchen Ertrag erzielt man beim Einsatz von 1,5 t 
+Dünger? 
 
 <img src="Aufgabe140.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 4. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 4. Grades: 
 
 f<sub>(x)</sub> = ax<sup>4</sup> + bx<sup>3</sup> + cx<sup>2</sup> + dx + e 
 
@@ -41,8 +45,8 @@ f’’<sub>(x)</sub> = 12ax<sup>2</sup> + 6bx + 2c
 
 5 Bedingungen: 
 
-1. Ungedüngt liefert das Feld minimal 4 t Erdbeeren 
-bedeutet zum einen: 
+1. Ungedüngt liefert das Feld minimal 4 t 
+Erdbeeren bedeutet zum einen: 
 
 f<sub>(0)</sub> = 4 --> 
 
@@ -50,8 +54,8 @@ a * 0<sup>4</sup> + b * 0<sup>3</sup> + c * 0<sup>2</sup> + d * 0 + e = 4 -->
 
 e = 4 
 
-2. Ungedüngt liefert das Feld minimal 4 t Erdbeeren 
-bedeutet zum anderen: 
+2. Ungedüngt liefert das Feld minimal 4 t 
+Erdbeeren bedeutet zum anderen: 
 
 f’<sub>(0)</sub> = 0 --> 
 
