--- a/Steck_Aufgabe139.html
+++ b/Steck_Aufgabe139.html
@@ -17,16 +17,18 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 139
 
-Einen Monopolisten kosten 20 produzierte Bauteile 6000 €, 
-und 60 Stück kosten 18000 €. Er erzielt bei diesen Mengen 
-weder Gewinn noch Verlust. Er ermittelt seine Kosten mit 
-einer quadratischen Funktion und rechnet dabei mit 5400 € 
-Fixkosten. Als Erlösfunktion nutzt er eine lineare 
+Einen Monopolisten kosten 20 produzierte Bauteile 
+6000 €, und 60 Stück kosten 18000 €. Er erzielt 
+bei diesen Mengen weder Gewinn noch Verlust. Er 
+ermittelt seine Kosten mit einer quadratischen 
+Funktion und rechnet dabei mit 5400 € Fixkosten. 
+Als Erlösfunktion nutzt er eine lineare 
 Funktion. Wie hoch ist sein maximaler Gewinn? 
 
 <img src="Aufgabe139.jpg" >
 
-Allgemeine Form einer ganzrationalen Kostenfunktion 2. Grades: 
+Allgemeine Form einer ganzrationalen 
+Kostenfunktion 2. Grades: 
  
 K<sub>(x)</sub> = ax<sup>2</sup> + bx + K<sub>f</sub> 
  
@@ -47,7 +49,9 @@ c = 5400
 2. Einen Monopolisten kosten 20 produzierte 
 Bauteile 6000 € bedeutet:  (c = 5400 eingesetzt)  
  
-K<sub>(20)</sub> = 6000 --> a * 20<sup>2</sup> + b * 20 + 5400 = 6000 -->  
+K<sub>(20)</sub> = 6000 --> 
+
+a * 20<sup>2</sup> + b * 20 + 5400 = 6000 -->  
  
 400a + 20b + 5400 = 6000 |-5400 
  
@@ -86,11 +90,13 @@ Gesuchte Kostenfunktion:
  
 K<sub>(x)</sub> = 4,5x<sup>2</sup> - 60x + 5400 
  
-Als Erlösfunktion nutzt er eine lineare Funktion, bedeutet: 
+Als Erlösfunktion nutzt er eine lineare Funktion, 
+bedeutet: 
  
 E<sub>(x)</sub> = p * x + b  mit p = Verkaufspreis 
  
-Macht bei K<sub>(20)</sub> und K<sub>(60)</sub> weder Gewinn noch Verlust bedeutet: 
+Macht bei K<sub>(20)</sub> und K<sub>(60)</sub> weder Gewinn noch Verlust 
+bedeutet: 
  
 E<sub>(20)</sub> = K<sub>(20)</sub> 
  
@@ -137,7 +143,7 @@ x = 40 ME
 
 G’’<sub>(x)</sub> = -9 < 0 --> Maximum 
 
-G<sub>(40)</sub> = - 4,5 * 40<sup>2</sup> + 360 * 40 - 5400 
+G<sub>(40)</sub> = -4,5 * 40<sup>2</sup> + 360 * 40 - 5400 
 
 G<sub>(40)</sub> = - 7200 + 14400 - 5400 
 
