--- a/Steck_Aufgabe141.html
+++ b/Steck_Aufgabe141.html
@@ -17,19 +17,22 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 141
 
-Das Wachstum einer Pflanze soll durch eine ganzrationale 
-Funktion 3. Grades modelliert werden. 
+Das Wachstum einer Pflanze soll durch eine 
+ganzrationale Funktion 3. Grades modelliert 
+werden. 
 Folgende Messwerte liegen vor: 
 
 Monate          0      1       5 
 Höhe in cm     20     40     120  
 
-Nach 5 Monaten hat sie ihre maximale Höhe erreicht. 
-Zu welchem Zeitpunkt ist der Höhenzuwachs am größten? 
+Nach 5 Monaten hat sie ihre maximale Höhe 
+erreicht. Zu welchem Zeitpunkt ist der 
+Höhenzuwachs am größten? 
 
 <img src="Aufgabe141.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
 
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
 
@@ -136,8 +139,8 @@ f’’<sub>(x)</sub> = 0 -->
  
 <span style="color:red">Nach 2 Monaten ist der Höhenzuwachs am größten.</span> 
 
-Monate        0      1      2      3       4       5 
-Höhe in cm   20     40     66     93     112     120 
+Monate        0     1     2     3       4       5 
+Höhe in cm   20    40    66    93     112     120 
  
 Höhenzuwachs bis zum:
 
