--- a/Steck_Aufgabe142.html
+++ b/Steck_Aufgabe142.html
@@ -17,21 +17,24 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 142
 
-Ein Chemiker hat ein Mittel entwickelt und will dessen 
-Wirkung mit einer ganzrationalen Funktion 3. Grades 
-beschreiben. Dazu hat er die Reaktionsstärke R auf das 
-Mittel in Abhängigkeit von der Dosis in kg gemessen. 
-(R = 0 bedeutet keine Reaktion, je größer R, desto 
-größer die Reaktion).  
+Ein Chemiker hat ein Mittel entwickelt und will 
+dessen Wirkung mit einer ganzrationalen Funktion 
+3. Grades beschreiben. Dazu hat er die Reaktions-
+stärke R auf das Mittel in Abhängigkeit von der 
+Dosis in kg gemessen. 
+(R = 0 bedeutet keine Reaktion, je größer R, 
+desto größer die Reaktion).  
 
 Dosis in kg            0     1        2     4               
 Reaktionsstärke R      0     1,25     4     8  
 
-Welche Dosis ist erforderlich, wenn R = 6,25 auftreten soll?
+Welche Dosis ist erforderlich, wenn R = 6,25 
+auftreten soll?
 
 <img src="Aufgabe142.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
 
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
 
@@ -130,7 +133,9 @@ R = 6,25 -->
 Mögliche Lösungen dieser Gleichung sind die 
 Faktoren von 6,25: 
  
-6,25 = 5 * 1,25 = 5 * 5 * 0,25 = 5 * 5 * 5 * 0,05 = 5 * 5 * 5 * 5 * 0,01 
+6,25 = 5 * 1,25 = 5 * 5 * 0,25 = 
+
+= 5 * 5 * 5 * 0,05 = 5 * 5 * 5 * 5 * 0,01 
  
 Hornerschema an der Stelle x = 5: 
  
@@ -159,8 +164,11 @@ x<sup>1,2</sup> = 0,5 ± 2,3
  
 x<sup>1</sup> = 0,5 + 2,3 = 2,8 
  
-x<sup>2</sup> = 0,5 - 2,3 = -1,8   keine Lösung, negative Dosis 
+x<sup>2</sup> = 0,5 - 2,3 = -1,8   
+
+keine Lösung, negative Dosis 
  
-<span style="color:red">Die Reaktionsstärke 6,25 tritt bei der Dosis 2,8 oder 5 auf.</span> 
+<span style="color:red">Die Reaktionsstärke 6,25 tritt bei der Dosis 
+2,8 oder 5 auf.</span> 
  
 </b></p></pre></body></html>
