--- a/Steck_Aufgabe143.html
+++ b/Steck_Aufgabe143.html
@@ -17,19 +17,21 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 143
 
-Vor der Vertragsunterzeichnung wird die Fitness eines 
-Fussballspielers überprüft, indem man seine 
+Vor der Vertragsunterzeichnung wird die Fitness 
+eines Fussballspielers überprüft, indem man seine 
 Laktatkonzentration im Blut abhängig von der 
-Laufgeschwindigkeit auf einem Laufband misst. Zu Beginn 
-der Untersuchung beträgt sie -25. Bei 10 km/h beträgt 
-sie 3, bei 14 km/h 3 und bei 15 km/h 4,25. 
-Zur Veranschaulichung sioll die Konzentration durch eine 
-Funktion 3. Grades dargestellt werden. Bei welcher 
-Geschwindigkeit ist die Laktatkonzentration am geringsten? 
+Laufgeschwindigkeit auf einem Laufband misst. Zu 
+Beginn der Untersuchung beträgt sie -25. Bei 
+10 km/h beträgt sie 3, bei 14 km/h 3 und bei 
+15 km/h 4,25. Zur Veranschaulichung sioll die 
+Konzentration durch eine Funktion 3. Grades 
+dargestellt werden. Bei welcher Geschwindigkeit 
+ist die Laktatkonzentration am geringsten? 
 
 <img src="Aufgabe143.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
 
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
 
@@ -39,7 +41,8 @@ f’’<sub>(x)</sub> = 6ax + 2b
 
 4 Bedingungen:
 
-1. Zu Beginn der Untersuchung beträgt sie -25 bedeutet: 
+1. Zu Beginn der Untersuchung beträgt sie -25 
+bedeutet: 
 
 f<sub>(0)</sub> = -25 --> 
 
@@ -161,15 +164,19 @@ x<sub>2</sub> = -------- = 8,1
  
 f’’<sub>(x)</sub> = 0,18x - 1,84 
  
-f’’<sub>(12,3)</sub> = 0,18 * 12,3 - 1,84 = 2,2 - 1,84 = 0,36 > 0 --> Minimum 
+f’’<sub>(12,3)</sub> = 0,18 * 12,3 - 1,84 = 
+
+= 2,2 - 1,84 = 0,36 > 0 --> Minimum 
  
-f’’<sub>(8,1)</sub> = 0,18 * 8,1 - 1,84 = 1,46 - 1,84 = - 0,38 < 0 --> Maximum 
+f’’<sub>(8,1)</sub> = 0,18 * 8,1 - 1,84 = 
+
+= 1,46 - 1,84 = -0,38 < 0 --> Maximum 
  
 f<sub>(12,3)</sub> = 0,03 * 12,3³ - 0,92 * 12,3² + 9 * 12,3 - 25 =  
  
 = 55,83 - 139,19 + 110,7 - 25 = 2,34 
  
-<span style="color:red">Die Laktatkonzentration erreicht ihr Minimum von 2,34 bei einer 
-Geschwindigkeit von 12,3 km/h.</span>
+<span style="color:red">Die Laktatkonzentration erreicht ihr Minimum von 
+2,34 bei einer Geschwindigkeit von 12,3 km/h.</span>
  
 </b></p></pre></body></html>
