--- a/Steck_Aufgabe144.html
+++ b/Steck_Aufgabe144.html
@@ -17,17 +17,19 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 144
 
-In einer forstwirtschaftlichen Untersuchung ermittelt 
-man wochenweise den Befall von Schadstoffinsekten und 
-stellt ihn mit Hilfe einer ganzrationalen Funktion 
-3. Grades dar. Die Messung beginnt nach 0,4 Wochen noch 
-ohne einen Befall. Nach 2 Wochen beträgt er 48, nach 
+In einer forstwirtschaftlichen Untersuchung 
+ermittelt man wochenweise den Befall von 
+Schadstoffinsekten und stellt ihn mit Hilfe 
+einer ganzrationalen Funktion 3. Grades dar. 
+Die Messung beginnt nach 0,4 Wochen noch ohne 
+einen Befall. Nach 2 Wochen beträgt er 48, nach 
 3,4 Wochen 81,6 und nach 4 Wochen 72. 
 Nach wieviel Wochen ist er wieder verschwunden? 
 
 <img src="Aufgabe144.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
 
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
 
