--- a/Steck_Aufgabe146.html
+++ b/Steck_Aufgabe146.html
@@ -17,18 +17,21 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 146
 
-Ein Arzneimittelhersteller will durch eine ganzrationale 
-Funktion 3. Grades beschreiben, wie sich die Konzentration 
-eines Medikaments nach der Einnahme abhängig von der Zeit 
-im Körper verändert, um sie dann für beliebige Zeiten 
-ablesen zu können. Zu Beginn liegt noch keine Konzentration 
-vor, nach 2 Stunden sind es 36 Einheiten und nach 3 Stunden 
-19,5. Er weiß, dass die höchste Konzentration nach 2 Stunden 
-erreicht ist. Wann beträgt sie 24,5 Einheiten? 
+Ein Arzneimittelhersteller will durch eine 
+ganzrationale Funktion 3. Grades beschreiben, wie 
+sich die Konzentration eines Medikaments nach der 
+Einnahme abhängig von der Zeit im Körper verändert, 
+um sie dann für beliebige Zeiten ablesen zu können. 
+Zu Beginn liegt noch keine Konzentration vor, nach 
+2 Stunden sind es 36 Einheiten und nach 3 Stunden 
+19,5. Er weiß, dass die höchste Konzentration nach 
+2 Stunden erreicht ist. Wann beträgt sie 24,5 
+Einheiten? 
 
 <img src="Aufgabe146.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
 
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
 
@@ -38,7 +41,8 @@ f’’<sub>(x)</sub> = 6ax + 2b
 
 4 Bedingungen: 
 
-1. Zu Beginn liegt noch keine Konzentration vor, bedeutet: 
+1. Zu Beginn liegt noch keine Konzentration vor, 
+bedeutet: 
 
 f<sub>(0)</sub> = 0 --> 
 
@@ -156,9 +160,11 @@ x<sub>2,3</sub> = -0,3 ± 3,14
  
 x<sub>2</sub> =  -0,3 + 3,14 = 2,84 
  
-x<sub>3</sub> = -0,3 - 3,14 = -3,44 keine Lösung, negative Zeit 
+x<sub>3</sub> = -0,3 - 3,14 = -3,44 
+
+keine Lösung, negative Zeit 
  
-<span style="color:red">Die Konzentration beträgt 24,5 Einheiten nach 1 h 
-und nach 2,84 h.</span> 
+<span style="color:red">Die Konzentration beträgt 24,5 Einheiten 
+nach 1 h und nach 2,84 h.</span> 
  
 </b></p></pre></body></html>
