--- a/Steck_Aufgabe147.html
+++ b/Steck_Aufgabe147.html
@@ -17,15 +17,18 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 147
 
-Ein Einproduktunternehmen geht von einer ertragsgesetzlichen 
-Kostenfunktion aus. Die Fixkosten betragen 40 GE, bei der 
-Herstellung von 1 ME entstehen Kosten von 62 GE, bei 3 ME 
-sind es 100 GE, und bei  5 ME entstehen 170 GE. Wie hoch sind 
-die variablen Stückkosten beim Betriebsminimum?            
+Ein Einproduktunternehmen geht von einer ertrags-
+gesetzlichen Kostenfunktion aus. Die Fixkosten 
+betragen 40 GE, bei der Herstellung von 1 ME 
+entstehen Kosten von 62 GE, bei 3 ME sind es 
+100 GE, und bei  5 ME entstehen 170 GE. Wie hoch 
+sind die variablen Stückkosten beim 
+Betriebsminimum?            
 
 <img src="Aufgabe147.jpg" >
 
-Allgemeine Form einer ertragsgesetzlichen Kostenfunktion 3. Grades:
+Allgemeine Form einer ertragsgesetzlichen 
+Kostenfunktion 3. Grades:
 
 K<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
 
@@ -43,8 +46,8 @@ a * 0<sup>3</sup> + b * 0<sup>3</sup> + c * + d = 40 -->
 
 d = 40 
 
-2. Bei der Herstellung von 1 ME entstehen Kosten von 62 GE bedeutet: 
-(d = 40 eingesetzt)  
+2. Bei der Herstellung von 1 ME entstehen Kosten 
+von 62 GE bedeutet: (d = 40 eingesetzt)  
 
 K<sub>(1)</sub> = 62 --> 
 
@@ -126,8 +129,10 @@ k<sub>v</sub>’<sub>(x)</sub> = 0
 K<sub>v(x)</sub> = x<sup>3</sup> - 5x<sup>2</sup> + 26x 
  
           K<sub>v(x)</sub>       x<sup>3</sup> - 5x<sup>2</sup> + 26x  
-k<sub>v(x)</sub> = --------- = ------------------ = x<sup>2</sup> - 5x + 26 
-            x                x     
+k<sub>v(x)</sub> = --------- = ------------------ = 
+            x                x  
+            
+= x<sup>2</sup> - 5x + 26 
  
 k<sub>v</sub>’<sub>(x)</sub> = 2x - 5 = 0 | +5 
  
@@ -137,8 +142,11 @@ x = 2,5 ME
 
 k<sub>v</sub>''<sub>(2,5)</sub> = 2 > 0 --> Minimum 
 
-k<sub>v(2,5)</sub> = 2,5<sup>2</sup> - 5 * 2,5 + 26 = 6,25 - 12,5 + 26 = 19,75 GE 
+k<sub>v(2,5)</sub> = 2,5<sup>2</sup> - 5 * 2,5 + 26 = 6,25 - 12,5 + 26 = 
 
-<span style="color:red">Das Betriebsminimum tritt bei 2,5 ME und 19,75 GE auf.</span> 
+= 19,75 GE 
+
+<span style="color:red">Das Betriebsminimum tritt bei 2,5 ME 
+und 19,75 GE auf.</span> 
 
 </b></p></pre></body></html>
