--- a/Steck_Aufgabe148.html
+++ b/Steck_Aufgabe148.html
@@ -17,15 +17,17 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 148
 
-Bei welcher Mengeneinheit liegt das Betriebsoptimum, 
-wenn Fixkosten von 9 GE vorliegen, bei 2 ME Kosten 
-von 69 GE, bei 6 ME welche von 93 GE und bei 10 ME 
-welche von 309 GE entstehen und der Betrieb mit einer 
-ertragsgesetzlichen Kostenfunktion arbeitet?           
+Bei welcher Mengeneinheit liegt das Betrieb-
+soptimum, wenn Fixkosten von 9 GE vorliegen, 
+bei 2 ME Kosten von 69 GE, bei 6 ME welche 
+von 93 GE und bei 10 ME welche von 309 GE 
+entstehen und der Betrieb mit einer ertrags-
+gesetzlichen Kostenfunktion arbeitet?           
 
 <img src="Aufgabe148.jpg" >
 
-Allgemeine Form einer ertragsgesetzlichen Kostenfunktion 3. Grades:
+Allgemeine Form einer ertragsgesetzlichen 
+Kostenfunktion 3. Grades:
 
 K<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
 
@@ -124,7 +126,8 @@ Gesuchte Kostenfunktion:
  
 K<sub>(x)</sub> = x<sup>3</sup> - 12x<sup>2</sup> + 50x + 9 
  
-Das Betriebsoptimum ist das Minimum der Stückkostenfunktion k<sub>(x)</sub>: 
+Das Betriebsoptimum ist das Minimum der 
+Stückkostenfunktion k<sub>(x)</sub>: 
  
                    d    
 k’<sub>(x)</sub> = 2ax + b - ---- = 0 
@@ -149,12 +152,14 @@ x<sub>1</sub> = x<sub>0</sub> - -------
 <img src="Aufgabe148_2.jpg" >
 
 Der letzte Wert in der Spalte E ist der gesuchte. 
-Mit ausreichender Genauigkeit x0= 6,12 ME = 6,1 ME 
-gerundet Betriebsoptimum. 
+Mit ausreichender Genauigkeit 
+x<sub>0</sub> = 6,12 ME = 6,1 ME gerundet Betriebsoptimum. 
  
          x<sup>3</sup> - 12x<sup>2</sup> + 26x + 9 
-k<sub>(x)</sub> = ----------------------- = x<sup>2</sup> - 12x + 26 + 9/x 
+k<sub>(x)</sub> = ----------------------- =  
                   x  
+
+= x<sup>2</sup> - 12x + 26 + 9/x
  
                   9    
 k’’<sub>(x)</sub> = 2 + 2 * ---- 
@@ -166,7 +171,9 @@ k’’<sub>(6,12)</sub> = 2 + 2 * -------  > 0 --> Minimum
  
 k<sub>(6,12)</sub> = 6,12<sup>2</sup> - 12 * 6,12 + 50 + 9/6,12 =  
  
-k<sub>(6,12)</sub> = 37,45 - 73,44 + 50 + 1,47 = 15,5 GE gerundet 
+k<sub>(6,12)</sub> = 37,45 - 73,44 + 50 + 1,47 = 
+
+= 15,5 GE gerundet 
  
 <span style="color:red">Koordinaten des Betriebsoptimums (6,1|15,5)</span> 
 
