--- a/Steck_Aufgabe149.html
+++ b/Steck_Aufgabe149.html
@@ -20,23 +20,28 @@
 Ein Produzent hat Grenzkosten von 38 GE bei 2 ME, 
 Stückkosten von  42 GE bei 4 ME, Gesamtkosten von 
 504 GE bei 12 ME, und Betriebsoptimum und Betriebs-
-minimum fallen zusammen. Er stellt diesen Zusammenhang 
-durch eine ganzrationale Kostenfunktion dar. Bei 
-welcher ME treten Betriebsoptimum und Betriebsminimum auf?       
+minimum fallen zusammen. Er stellt diesen 
+Zusammenhang durch eine ganzrationale Kosten-
+funktion dar. Bei welcher ME treten 
+Betriebsoptimum und Betriebsminimum auf?       
 
 <img src="Aufgabe149.jpg" >
 
-Betriebsoptimum und Betriebsminimum fallen zusammen bedeutet: 
-Stückkostenfunktion = variable Stückkostenfunktion, 
+Betriebsoptimum und Betriebsminimum fallen 
+zusammen bedeutet: 
+Stückkostenfunktion = variable Stückkostenfunktion 
 keine Fixkosten 
  
 k<sub>(x)</sub> = k<sub>v(x)</sub> --> d = 0 
  
                 K<sub>(x)</sub>     K<sub>v(x)</sub>     ax<sup>3</sup> + bx<sup>2</sup> + cx                           
-k<sub>(x)</sub> = k<sub>v(x)</sub> = ------ = ------- = ----------------- = ax<sup>2</sup> + bx + c  
+k<sub>(x)</sub> = k<sub>v(x)</sub> = ------ = ------- = ----------------- =   
                   x        x              x
 
-Allgemeine Form einer ertragsgesetzlichen Kostenfunktion 3. Grades:
+= ax<sup>2</sup> + bx + c
+
+Allgemeine Form einer ertragsgesetzlichen 
+Kostenfunktion 3. Grades:
 
 K<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
 
@@ -123,6 +128,7 @@ k’’<sub>(x)</sub> = 2 > 0 --> Minimum
  
 k<sub>(8)</sub> = 8<sup>2</sup> - 16 * 8 + 90 = 26 
  
-<span style="color:red">Betriebsoptimum und Betriebsminimum liegen bei 8 ME und 26 GE.</span> 
+<span style="color:red">Betriebsoptimum und Betriebsminimum liegen 
+bei 8 ME und 26 GE.</span> 
 
 </b></p></pre></body></html>
