--- a/Steck_Aufgabe145.html
+++ b/Steck_Aufgabe145.html
@@ -18,18 +18,21 @@
     <pre><p class ="Aufgabe"><b>Aufgabe 145
 
 Hochspannungsleitungen hängen zwischen den gleich 
-hohen Masten durch. Höhenmessungen hatten folgende 
-Ergebnisse: 20 m von einem Masten entfernt hängt 
-die Leitung in 42,8 m Höhe, im Abstand von 80 m 
-sind es 35 m und in einem von 120 m sind es 31,8 m. 
-Wie weit ist der tiefste Punkt entfernt? 
+hohen Masten durch. Höhenmessungen hatten 
+folgende Ergebnisse: 20 m von einem Masten 
+entfernt hängt die Leitung in 42,8 m Höhe, im 
+Abstand von 80 m sind es 35 m und in einem von 
+120 m sind es 31,8 m. Wie weit ist der tiefste 
+Punkt entfernt? 
 
 <img src="Aufgabe145.jpg" >
 
-Es sind 3 Punkte angegeben, deswegen ist von einer 
-ganzrationalen Funktion 2. Grades auszugehen.
+Es sind 3 Punkte angegeben, deswegen ist von 
+einer ganzrationalen Funktion 2. Grades 
+auszugehen.
 
-Allgemeine Form einer ganzrationalen Funktion 2. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 2. Grades: 
 
 f<sub>(x)</sub> = ax<sup>2</sup> + bx + c 
 
@@ -39,8 +42,8 @@ f’’<sub>(x)</sub> = 2a
 
 3 Bedingungen: 
 
-1. 20 m von einem Masten entfernt hängt die Leitung 
-in 42,8 m Höhe bedeutet: 
+1. 20 m von einem Masten entfernt hängt die 
+Leitung in 42,8 m Höhe bedeutet: 
 
 f<sub>(20)</sub> = 42,8 --> 
 
